--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
-      href="https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/streetlamp.png?v=1674242830652"
+      href="/assets/lamppost2.png"
     />
 
     <title>Record!</title>
@@ -39,11 +39,11 @@
     
     <div class="imgwrapper">
       <img
-        src="https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/lamppost2.png?v=1674244403353"
+        src="/assets/lamppost2.png"
         alt="lamp post icon"
       />
       <img
-        src="https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/streetlamp.png?v=1674242830652"
+        src="/assets/lamppost1.png"
         alt="lamp post icon"
       />
       <p>Bergmannstraße 43</p>
